fix the gap between the rows
added border radius to everything

working on buttons gaps

--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@
     padding: 20px;
     width: 400px;
     height: fit-content;
+    margin: 100px auto;
+    border-radius: 30px;
 }
 
 .display {
@@ -15,13 +17,17 @@
     text-align: end;
     margin-bottom: 20px;
     padding: 10px;
-    font-size: 20px;
+    font-size: 30px;
+    border-radius: 30px;
+}
+
+#top-display {
+    margin-bottom: 10px;
 }
 
 #left-row {
     display: flex;
     flex-wrap: wrap;
-    flex-grow: 1;
     row-gap: 20px;
 }
 
@@ -39,7 +45,9 @@
 }
 
 button {
-    width: 90px;
-    height: 90px;
-    font-size: 20px;
+    width: 97px;
+    height: 97px;
+    font-size: 30px;
+    flex-shrink: 0;
+    border-radius: 100px;
 }
